Update dependencies and add E2B environment variables

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ POSTGRES_PASSWORD=your_password
 
 # JWT
 JWT_SECRET=your_jwt_secret
+
+# E2B Code Execution
+# Get your API key at: https://e2b.dev/dashboard?tab=keys
+# Free Hobby tier includes $100 in credits
+E2B_API_KEY=your_e2b_api_key
