--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,34 @@
 -i https://pypi.org/simple
-bcrypt==4.1.2; python_version >= '3.7'
-blinker==1.7.0; python_version >= '3.8'
-click==8.1.7; python_version >= '3.7'
-flask==3.0.3; python_version >= '3.8'
-flask-cors==4.0.0; python_version >= '3.8'
-flask-dotenv==0.1.2
+anyio==4.12.1; python_version >= '3.9'
+attrs==25.4.0; python_version >= '3.9'
+bcrypt==5.0.0; python_version >= '3.8'
+blinker==1.9.0; python_version >= '3.9'
+bracex==2.6; python_version >= '3.9'
+certifi==2026.1.4; python_version >= '3.7'
+click==8.3.1; python_version >= '3.10'
+dockerfile-parse==2.0.1; python_version >= '3.6'
+e2b==2.13.2; python_version >= '3.10' and python_version < '4.0'
+e2b-code-interpreter==2.4.1; python_version >= '3.9' and python_version < '4.0'
+flask==3.1.2; python_version >= '3.9'
+flask-cors==6.0.2; python_version >= '3.9' and python_version < '4.0'
+h11==0.16.0; python_version >= '3.8'
+httpcore==1.0.9; python_version >= '3.8'
+httpx==0.28.1; python_version >= '3.8'
+idna==3.11; python_version >= '3.8'
 itsdangerous==2.2.0; python_version >= '3.8'
-jinja2==3.1.3; python_version >= '3.7'
-markupsafe==2.1.5; python_version >= '3.7'
-psycopg2==2.9.9; python_version >= '3.7'
-pyjwt==2.8.0; python_version >= '3.7'
-python-dotenv==1.0.1; python_version >= '3.8'
-werkzeug==3.0.2; python_version >= '3.8'
+jinja2==3.1.6; python_version >= '3.7'
+markdown-it-py==4.0.0; python_version >= '3.10'
+markupsafe==3.0.3; python_version >= '3.9'
+mdurl==0.1.2; python_version >= '3.7'
+packaging==26.0; python_version >= '3.8'
+protobuf==6.33.5; python_version >= '3.9'
+psycopg2==2.9.11; python_version >= '3.9'
+pygments==2.19.2; python_version >= '3.8'
+pyjwt==2.11.0; python_version >= '3.9'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+python-dotenv==1.2.1; python_version >= '3.9'
+rich==14.3.2; python_full_version >= '3.8.0'
+six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+typing-extensions==4.15.0; python_version >= '3.9'
+wcmatch==10.1; python_version >= '3.9'
+werkzeug==3.1.5; python_version >= '3.9'
