--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ POSTGRES_PASSWORD=your_password
 JWT_SECRET=your_jwt_secret
 
 # E2B Code Execution
-# Get your API key at: https://e2b.dev/dashboard?tab=keys
+# Get the API key at: https://e2b.dev/dashboard?tab=keys
 # Free Hobby tier includes $100 in credits
 E2B_API_KEY=your_e2b_api_key
+
+# Gemini AI (Test Case Generation)
+# Get the API key at: https://aistudio.google.com/apikey
+GEMINI_API_KEY=your_gemini_api_key
