--- a/requirements.txt
+++ b/requirements.txt
@@ -31,4 +31,5 @@ rich==14.3.2; python_full_version >= '3.8.0'
 six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 typing-extensions==4.15.0; python_version >= '3.9'
 wcmatch==10.1; python_version >= '3.9'
+google-genai>=1.0.0
 werkzeug==3.1.5; python_version >= '3.9'
