Prepare app for Heroku deployment

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
-# PostgreSQL
+# PostgreSQL (local development)
 POSTGRES_DATABASE=your_database_name
 POSTGRES_USERNAME=your_username
 POSTGRES_PASSWORD=your_password
+
+# PostgreSQL (Heroku — set automatically by heroku-postgresql addon)
+# DATABASE_URL=postgresql://user:pass@host:port/dbname
+
+# CORS — set to frontend URL in production (e.g., https://front-end-app-url.netlify.app)
+# Defaults to * (all origins) if not set
+# CORS_ORIGIN=https://frontend-app-url.com
 
 # JWT
 JWT_SECRET=your_jwt_secret
