--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,4 @@ typing-extensions==4.15.0; python_version >= '3.9'
 wcmatch==10.1; python_version >= '3.9'
 google-genai>=1.0.0
 werkzeug==3.1.5; python_version >= '3.9'
+gunicorn>=22.0.0
